[tool.poetry]
name = "test-automation-framework"
version = "0.1.0"
description = "A BDD test automation framework using Playwright and Behave"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
playwright = "^1.40.0"
pytest = "^7.4.3"
pytest-playwright = "^0.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"